### 20260105 - 오전 작업 ### 1. 불필요 파일 정리 2. index.html  이클럽 주간 최대 검색 - 상품 더보기 및 container 높이 문제 해결 3. index.html (mo) - MD추천 탭 메뉴 구현 4. index.html (mo) -bottom sheet 페이지 구현 5. pc용 화면 - 폴더구조 수정

--- a/assets/styles/mobile.scss
+++ b/assets/styles/mobile.scss
@@ -19,9 +19,8 @@ body.mobile-body {
 }
 
 // 3. Components (Mobile Specific)
-// @import "mobile/components/buttons"; // Commented out until created
+@import "mobile/components/offcanvas"; // Offcanvas 스타일
 @import "mobile/components/cards"; // Mobile product cards
-// @import "mobile/components/icons"; // Commented out until created
 
 // 4. Layout
 @import "mobile/layout/header";
