--- a/assets/styles/mobile/pages/_main.scss
+++ b/assets/styles/mobile/pages/_main.scss
@@ -553,7 +553,7 @@
             display: none;
         }
 
-        .tab-btn {
+        .tab-item {
             padding: rem(8) rem(16);
             border-radius: rem(2);
             border: 0;
