--- a/assets/styles/pc/components/_ranking.scss
+++ b/assets/styles/pc/components/_ranking.scss
@@ -121,6 +121,7 @@
 
 .ranking-carousel-track {
     display: flex;
+    align-items: flex-start;
     transition: transform 0.5s ease;
     width: 100%;
 }
