### 오주 작업 : 20260105 ### 1. 카테고리 레이어 2. 모달 준비 3. toast 준비 - icon-heart 연동

--- a/assets/styles/abstracts/_variables.scss
+++ b/assets/styles/abstracts/_variables.scss
@@ -93,6 +93,8 @@ $header-height-mobile: rem(136); // Header top(48) + GNB(48) + Padding(16+8+16).
 $layout-container-width: rem(1360);
 $layout-mobile-padding: rem(16);
 
+$breakpoint-mobile: 768px;
+
 
 // 4. 애니메이션 (Transitions)
 // -----------------------------------------------------------------------------
