--- a/assets/styles/mobile.scss
+++ b/assets/styles/mobile.scss
@@ -21,6 +21,7 @@ body.mobile-body {
 // 3. Components (Mobile Specific)
 @import "mobile/components/offcanvas"; // Offcanvas 스타일
 @import "mobile/components/cards"; // Mobile product cards
+@import "pc/components/toast"; // Shared Toast Component
 
 // 4. Layout
 @import "mobile/layout/header";
