--- a/assets/styles/pc.scss
+++ b/assets/styles/pc.scss
@@ -15,6 +15,8 @@
 @import "pc/components/badges";
 @import "pc/components/cards";
 @import "pc/components/ranking";
+@import "pc/components/modal";
+@import "pc/components/toast";
 
 // 4. Layout (PC 헤더, 푸터)
 @import "pc/layout/header";
